# mplty

./: .gitignore  README.md  justfile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
mplty/: main.py
tests/: test_main.py
