[project]
name = "texter"
version = "0.1.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Barbier", email = "joseph@ysunflower.com" },
]
keywords = ["a", "keywords", "list", "of"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "matplotlib>=3.10.9",
  "typst>=0.14.9",
]

[project.urls]
Documentation = "https://y-sunflower.github.io/texter/"
Homepage = "https://y-sunflower.github.io/texter/"
Issues = "https://github.com/y-sunflower/texter/issues"
Repository = "https://github.com/y-sunflower/texter"

[dependency-groups]
dev = [
  "mkdocstrings-python>=1.16.5",
  "prek>=0.3.2",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
  "ty>=0.0.15",
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["texter"]

[tool.uv.sources]
texter = { workspace = true }
